workbench: load git repository asynchronously

This slipped through the cracks when fixing loading in sshfs directory.

https://bugzilla.gnome.org/show_bug.cgi?id=741915